--- a/canada.html
+++ b/canada.html
@@ -481,7 +481,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Educational Project</p>
+            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Project</p>
             <div class="footer-nav">
                 <a href="global.html">Previous: Global Trends</a>
                 <a href="future.html">Next: Future & Ethics</a>
