--- a/global.html
+++ b/global.html
@@ -33,9 +33,9 @@
             <div class="container">
                 <h2>Select a Region to Explore</h2>
                 <div class="country-buttons">
-                    <button class="country-btn active" onclick="showCountryInfo('usa')">🇺🇸 United States</button>
-                    <button class="country-btn" onclick="showCountryInfo('china')">🇨🇳 China</button>
-                    <button class="country-btn" onclick="showCountryInfo('europe')">🇪🇺 Europe</button>
+                    <button class="country-btn active" onclick="showCountryInfo('usa')">United States</button>
+                    <button class="country-btn" onclick="showCountryInfo('china')">China</button>
+                    <button class="country-btn" onclick="showCountryInfo('europe')">Europe</button>
                 </div>
             </div>
         </section>
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <div class="country-media">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/JMLsJJuCqTE" 
+                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/XrufBdKcspg" 
                                     title="AI in Silicon Valley" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -96,7 +96,7 @@
                             </div>
                         </div>
                         <div class="country-media">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/aI8KaWMJrI0" 
+                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/lH2gMNrUuEY" 
                                     title="China's AI Development" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                             </div>
                         </div>
                         <div class="country-media">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/ICg5dvOIVkE" 
+                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/s_rxOnCt3HQ" 
                                     title="European AI Strategy" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -234,7 +234,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Educational Project</p>
+            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Project</p>
             <div class="footer-nav">
                 <a href="index.html">Home</a>
                 <a href="canada.html">Next: Canada</a>
