--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Educational Project</p>
+            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Project</p>
             <div class="social-links">
                 <a href="#" onclick="playClickSound()">GitHub</a>
                 <a href="#" onclick="playClickSound()">LinkedIn</a>
