--- a/future.html
+++ b/future.html
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                         <div class="tech-media">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/J3qhHgBhqPE" 
+                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/TetLY4gPDpo" 
                                     title="Neuromorphic Computing" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                             </div>
                         </div>
                         <div class="tech-media">
-                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/nK2cRFVgAVY" 
+                            <iframe width="100%" height="250" src="https://www.youtube.com/embed/It2Q1eK_Klc" 
                                     title="Explainable AI" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
@@ -444,7 +444,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Educational Project</p>
+            <p>&copy; 2024 AI Trends Explorer | Gurpreet Kaur - 816321 | Project</p>
             <div class="footer-nav">
                 <a href="canada.html">Previous: Canada</a>
                 <a href="index.html">Back to Home</a>
